feat: update responsive styles and add projects images

--- a/src/sections/aboutMe.astro
+++ b/src/sections/aboutMe.astro
@@ -13,7 +13,7 @@ import GradientText from "@/animations/gradientText/gradientText";
         <div class="w-8 h-0.5 bg-primary"></div>
       </span>
       <h2
-        class="text-5xl font-extrabold bg-gradient-to-r from-primary to-text text-transparent bg-clip-text"
+        class="text-5xl font-extrabold bg-gradient-to-r from-primary to-text text-transparent bg-clip-text text-center"
       >
         Get to Know <span class="text-gradient">Who I Am</span>
       </h2>
