--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -23,12 +23,9 @@ import AnimatedBackground from "@/animations/background/background";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
 
     <meta
       name="description"
