--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -11,7 +11,7 @@ import GradientText from "@/animations/gradientText/gradientText";
       <!-- Logo -->
       <a
         href="#hero"
-        class="text-2xl font-bold text-gradient flex items-center gap-2"
+        class="text-2xl font-black text-gradient flex items-center gap-2"
       >
         <GradientText
           colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
