--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -11,27 +11,30 @@ import AnimateRotatingText from "@/animations/rotatingText/animateRotatingText";
       <!-- Hero Content -->
       <div class="space-y-7 reveal-content">
         <div
-          class="inline-block py-1 px-3 rounded-full bg-transparent border border-primary text-sm mb-2 animate-fadeUp"
+          class="flex m-0 justify-center md:justify-start w-full animate-fadeUp"
           style="--delay: 0.2s"
         >
-          <span class="flex items-center gap-2">
-            <span class="size-[10px] rounded-full bg-primary animate-pulse"
-            ></span>
-            <AnimatedSplitText
-              text="Available for Freelance Projects"
-              className="text-text/80 text-sm font-semibold"
-              client:load
-              x={0}
-              y={10}
-              duration={0.8}
-              stagger={0.1}
-            />
-          </span>
+          <div
+            class="inline-block py-1 px-3 rounded-full bg-transparent border border-primary text-sm mb-2"
+          >
+            <span class="flex items-center gap-2">
+              <span class="size-[10px] rounded-full bg-primary animate-pulse"
+              ></span>
+              <AnimatedSplitText
+                text="Available for Freelance Projects"
+                className="text-text/80 text-sm font-semibold"
+                client:load
+                x={0}
+                y={10}
+                duration={0.8}
+                stagger={0.1}
+              />
+            </span>
+          </div>
         </div>
 
         <div class="flex flex-col gap-6 pt-2">
-
-            <div class="flex animate-fadeUp" style="--delay: 0.8s">
+          <div class="flex animate-fadeUp" style="--delay: 0.8s">
             <AnimatedSplitText
               text="Hi, I'm Mario Perdomo"
               className="text-5xl md:text-5xl lg:text-6xl font-extrabold text-center md:text-start"
@@ -42,57 +45,56 @@ import AnimateRotatingText from "@/animations/rotatingText/animateRotatingText";
               duration={1}
               stagger={0.1}
             />
-            </div>
-          
+          </div>
+
           <AnimateRotatingText client:load />
 
-            <div class="animate-fadeUp" style="--delay: 0.8s">
-              <AnimatedSplitText
-                text="I craft digital experiences that blend creativity with technical excellence. Specializing in creating modern, responsive, and user-friendly web applications."
-                className="text-text/80 text-lg max-w-lg"
-                client:load
-                x={0}
-                y={20}
-                duration={1}
-                stagger={0.02}
-              />
-            </div>
+          <div class="animate-fadeUp" style="--delay: 0.8s">
+            <AnimatedSplitText
+              text="I craft digital experiences that blend creativity with technical excellence. Specializing in creating modern, responsive, and user-friendly web applications."
+              className="text-text/80 text-lg max-w-lg text-center md:text-start"
+              client:load
+              x={0}
+              y={20}
+              duration={1}
+              stagger={0.02}
+            />
           </div>
-
-          <div
-            class="flex flex-wrap gap-4 pt-4 animate-fadeUp"
-            style="--delay: 1s"
-          >
-            <a
-              href="#projects"
-              class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
-            >
-              <i class="ri-eye-line"></i> View My Work
-            </a>
-
-            <a
-              href="#contact"
-              class="border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm"
-            >
-              <i class="ri-chat-1-line"></i> Contact Me
-            </a>
-          </div>
-          <SocialLinks />
         </div>
 
-        <!-- Hero Image -->
-        <CardImage />
-      </div>
-    </div>
+        <div
+          class="flex flex-wrap gap-4 pt-4 animate-fadeUp justify-center md:justify-start"
+          style="--delay: 1s"
+        >
+          <a
+            href="#projects"
+            class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
+          >
+            <i class="ri-eye-line"></i> View My Work
+          </a>
 
-    <!-- Background Elements -->
-    <div
-      class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-secondary/40 rounded-full blur-3xl"
-    >
+          <a
+            href="#contact"
+            class="border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm"
+          >
+            <i class="ri-chat-1-line"></i> Contact Me
+          </a>
+        </div>
+        <SocialLinks />
+      </div>
+
+      <!-- Hero Image -->
+      <CardImage />
     </div>
-    <div
-      class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-secondary/50 rounded-full blur-3xl"
-    >
-    </div>
+  </div>
+
+  <!-- Background Elements -->
+  <div
+    class="absolute -z-10 top-1/2 left-1/4 w-64 h-64 bg-secondary/40 rounded-full blur-3xl"
+  >
+  </div>
+  <div
+    class="absolute -z-10 bottom-1/4 right-1/3 w-96 h-96 bg-secondary/50 rounded-full blur-3xl"
+  >
   </div>
 </section>
