--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -34,10 +34,10 @@ import AnimateRotatingText from "@/animations/rotatingText/animateRotatingText";
         </div>
 
         <div class="flex flex-col gap-6 pt-2">
-          <div class="flex animate-fadeUp" style="--delay: 0.8s">
+          <div class="flex animate-fadeUp" style="--delay: 0.4s">
             <AnimatedSplitText
               text="Hi, I'm Mario Perdomo"
-              className="text-5xl md:text-5xl lg:text-6xl font-extrabold text-center md:text-start"
+              className="text-5xl lg:text-6xl font-extrabold text-center md:text-start"
               highlightText="Mario Perdomo"
               client:load
               x={0}
