--- a/src/components/socialLinks/socialLinks.astro
+++ b/src/components/socialLinks/socialLinks.astro
@@ -1,26 +1,26 @@
 <div class="flex gap-4 pt-2 justify-center md:justify-start">
   <a
-    href="#"
+    href="https://github.com/cmperdomo17"
     class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
+    target="_blank"
+    rel="noopener noreferrer"
   >
     <i class="ri-github-fill"></i>
   </a>
   <a
-    href="#"
+    href="https://www.linkedin.com/in/cmperdomo"
     class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
+    target="_blank"
+    rel="noopener noreferrer"
   >
     <i class="ri-linkedin-fill"></i>
   </a>
   <a
-    href="#"
+    href="https://www.instagram.com/c.mario17_/"
     class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
+    target="_blank"
+    rel="noopener noreferrer"
   >
-    <i class="ri-twitter-x-fill"></i>
-  </a>
-  <a
-    href="#"
-    class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
-  >
-    <i class="ri-dribbble-line"></i>
+    <i class="ri-instagram-line"></i>
   </a>
 </div>
