--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -48,10 +48,11 @@ import GradientText from "@/animations/gradientText/gradientText";
           >Contact</a
         >
         <a
-          href="#"
+          href="https://res.cloudinary.com/ddfabfatl/image/upload/v1747789372/CV_English_ry76dl.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
           class="bg-primary hover:bg-primary/50 hover:text-text text-background font-semibold py-2 px-6 rounded-full transition-all duration-500 flex items-center gap-2"
         >
-          <i class="ti ti-download"></i>
           Resume
         </a>
       </nav>
