--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -84,7 +84,7 @@ import AnimateRotatingText from "@/animations/rotatingText/animateRotatingText";
       </div>
 
       <!-- Hero Image -->
-      <CardImage />
+      <CardImage className="hidden md:block" />
     </div>
   </div>
 
