--- a/src/sections/aboutMe.astro
+++ b/src/sections/aboutMe.astro
@@ -1,11 +1,9 @@
 ---
 import GradientText from "@/animations/gradientText/gradientText";
 import CardImage from "@/components/cardImage/cardImage.astro";
-
 ---
 
 <section id="about" class="py-24">
-
   <div class="container mx-auto px-4 md:px-8">
     <div class="flex flex-col items-center mb-16">
       <span class="text-primary font-medium mb-4 flex items-center gap-2">
@@ -30,7 +28,7 @@ import CardImage from "@/components/cardImage/cardImage.astro";
         <div class="hero-gradients absolute inset-0 rounded-4xl"></div>
 
         <!-- Image -->
-        <CardImage />
+        <CardImage className="pb-16 md:pb-0" />
       </div>
 
       <!-- About Content -->
@@ -46,30 +44,23 @@ import CardImage from "@/components/cardImage/cardImage.astro";
         </GradientText>
 
         <p class="text-gray-300">
-          I'm a web developer with over 5 years of experience, specializing in
-          building modern, user-centered interfaces. I blend strong technical
-          skills with a keen design sense to deliver digital experiences that
-          are both functional and visually engaging.
+          I'm a passionate web developer with 3 years of experience, focused on creating modern, user-centered interfaces that truly make an impact. I combine technical expertise with a strong eye for design to craft digital products that are not only functional, but also memorable and engaging.
         </p>
 
         <p class="text-gray-300">
-          Throughout my career, I've developed scalable and maintainable
-          solutions using technologies like Next.js, React, Tailwind CSS, and
-          NestJS. I prioritize code quality, frontend performance, and intuitive
-          user experiences—always approaching projects with a full-stack mindset
-          and product-driven perspective.
+          Over my career, I've built scalable and maintainable solutions using technologies like Next.js, React, and Tailwind CSS. I care deeply about code quality, frontend performance, and delivering intuitive user experiences. I always approach projects with a product-driven mindset, collaborating closely with teams to turn ideas into real, high-impact solutions.
         </p>
 
         <div class="pt-4">
-            <GradientText
+          <GradientText
             colors={["#42d9c8", "#338b80", "#42d9c8", "#338b80"]}
             animationSpeed={10}
             showBorder={false}
             className="font-bold text-xl mb-4"
             client:load
-            >
+          >
             My Tech Stack
-            </GradientText>
+          </GradientText>
           <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
             <div
               class="skill-item flex items-center gap-3 bg-bg/70 p-3 rounded-lg border border-primary/40 hover:border-primary transition-colors duration-300"
@@ -151,11 +142,13 @@ import CardImage from "@/components/cardImage/cardImage.astro";
         <!-- CTA Button -->
         <div class="pt-6">
           <a
-            href="#"
+            href="https://res.cloudinary.com/ddfabfatl/image/upload/v1747789372/CV_English_ry76dl.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
             class="inline-flex items-center gap-2 bg-transparent border border-primary hover:bg-primary hover:text-background text-text font-semibold py-3 px-6 rounded-full transition-all duration-300"
           >
-            <i class="ri-file-download-line"></i>
-            Download Resume
+            <i class="ti ti-file-cv"></i>
+            View Resume
           </a>
         </div>
       </div>
