--- a/src/sections/contact.astro
+++ b/src/sections/contact.astro
@@ -15,7 +15,7 @@ import SocialLinks from "@/components/socialLinks/socialLinks.astro";
   >
   </div>
 
-  <div class="container mx-auto px-4 md:px-8 relative z-10">
+  <div class="container mx-auto px-4 md:px-8 relative">
     <!-- Section Header -->
     <div class="text-center mb-12">
       <h2
