--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,8 +37,8 @@ main {
 
 input:-webkit-autofill {
     background-color: transparent;
-    box-shadow: 0 0 0px 1000px transparent inset !important;
-    -webkit-text-fill-color: #ffffff !important;
+    box-shadow: 0 0 0px 1000px transparent inset;
+    -webkit-text-fill-color: #ffffff;
     transition: background-color 5000s ease-in-out 0s;
 }
 
