feat: add navbar scroll animation and update favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,9 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Projects /></section>
   <section class="scroll-section"><Experience /></section>
   <section class="scroll-section"><Contact /></section>
-  </div>
 </Layout>
+
+<script type="module" src="/src/animations/navbarAnimation/navbar-animation.js"></script>
 
 <script type="module">
   import {
