--- a/src/sections/navbar.astro
+++ b/src/sections/navbar.astro
@@ -2,7 +2,7 @@
 import GradientText from "@/animations/gradientText/gradientText";
 ---
 
-<header
+<nav
   id="navbar"
   class="fixed bg-background w-[calc(100%-16px)] md:w-[calc(100%-17px)] top-0 left-0 z-10 transition-all duration-300 py-4"
 >
@@ -71,7 +71,7 @@ import GradientText from "@/animations/gradientText/gradientText";
       </button>
     </div>
   </div>
-</header>
+</nav>
 
 <!-- Mobile Navigation -->
 <div
