--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "@/sections/footer.astro";
-import Header from "@/sections/header.astro";
+import Navbar from "@/sections/navbar.astro";
 import "@/styles/global.css";
 import AnimatedBackground from "@/animations/background/background";
 ---
@@ -34,7 +34,7 @@ import AnimatedBackground from "@/animations/background/background";
   </head>
   <body>
     <AnimatedBackground client:load />
-    <Header />
+    <Navbar />
     <main>
       <slot />
     </main>
