feat: refactor navbar with animated menu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Contact /></section>
 </Layout>
 
-<script type="module" src="/src/animations/navbarAnimation/navbar-animation.js"></script>
+<script type="module" src="/src/animations/navbar/navbar-animation.js"></script>
 
 <script type="module">
   import {
@@ -60,5 +60,7 @@ import AboutMe from "@/sections/aboutMe.astro";
     opacity: 0;
     transform: translateX(-120px);
     transition: box-shadow 0.5s;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 </style>
