feat(navbar): update script and style paths

--- a/src/sections/navbar.astro
+++ b/src/sections/navbar.astro
@@ -42,7 +42,7 @@ import SocialLinks from "@/components/socialLinks/socialLinks.astro";
 
       <div class="menu-footer">
         <SocialLinks />
-        <div class="language-section">
+        <div class="">
           <i class="ti ti-world"></i>
           <span>Language</span>
         </div>
@@ -51,5 +51,5 @@ import SocialLinks from "@/components/socialLinks/socialLinks.astro";
   </div>
 </div>
 
-<link rel="stylesheet" href="/src/styles/navbar.css" />
-<script src="/src/animations/navbar/animated-menu.js"></script>
+<link rel="stylesheet" href="/styles/navbar.css" />
+<script src="/animations/navbar/animated-menu.js"></script>
