feat(navbar): remove animated menu script and update script type

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Contact /></section>
 </Layout>
 
-<script type="module" src="/src/animations/navbar/navbar-animation.js"></script>
+<script src="/src/animations/navbar/navbar-animation.js"></script>
 
 <script type="module">
   import {
