feat(navbar): adjust width and height styles in navbar and menu

--- a/src/sections/navbar.astro
+++ b/src/sections/navbar.astro
@@ -7,7 +7,7 @@ import "@/styles/navbar.css";
 
 <nav
   id="navbar"
-  class="fixed bg-background w-[calc(100%-16px)] md:w-[calc(100%-17px)] top-0 left-0 z-10 transition-all duration-300 py-2 px-6 md:px-12"
+  class="fixed bg-background w-full top-0 left-0 z-[5] transition-all duration-300 py-2 px-6 md:px-12"
 >
   <div class="container mx-auto">
     <div class="flex justify-between items-center">
