--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,9 @@
 }
 
 html {
-    scrollbar-color: var(--color-primary) var(--color-background);
-    scrollbar-width: thin;
+    ::-webkit-scrollbar {
+        width: 0;
+    }
 }
 
 html,
@@ -114,22 +115,4 @@ input:-webkit-autofill {
     to {
         opacity: 1;
     }
-}
-
-::-webkit-scrollbar {
-    width: 10px;
-    background: var(--color-bg);
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--color-first);
-    border-radius: 8px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #029a95;
-}
-
-::-webkit-scrollbar-corner {
-    background: var(--color-bg);
 }
