--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -3,10 +3,9 @@
     position: fixed;
     top: 0;
     right: 0;
-    height: 100vh;
+    height: 100dvh;
     pointer-events: none;
     z-index: 60;
-    /* Debe ser menor que el del hamburger */
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -19,7 +18,7 @@
 .menu-container {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background: linear-gradient(45deg, #09090b 15%, #0f1820 100%);
     transform: translateX(calc(100% + 100px));
     transition: transform 0.8s cubic-bezier(0.76, 0, 0.24, 1);
@@ -43,6 +42,7 @@
     flex-direction: column;
     justify-content: space-between;
     color: white;
+    overflow-y: auto;
 }
 
 .menu-nav {
