--- a/src/sections/navbar.astro
+++ b/src/sections/navbar.astro
@@ -8,7 +8,7 @@ import "@/styles/navbar.css";
 <!-- Navbar -->
 <nav
   id="navbar"
-  class="fixed top-0 left-0 w-full bg-background z-[5] py-2 px-6 md:px-12 transition-all duration-300"
+  class="fixed top-0 left-0 w-full bg-transparent z-10 py-4 px-6 md:px-12 transition-all duration-300"
 >
   <div class="container mx-auto">
     <div class="flex items-center justify-between">
