--- a/src/components/socialLinks/socialLinks.astro
+++ b/src/components/socialLinks/socialLinks.astro
@@ -1,4 +1,4 @@
-<div class="flex gap-4 pt-2 justify-center md:justify-start">
+<div class="flex gap-4 justify-center md:justify-start">
   <a
     href="https://github.com/cmperdomo17"
     class="text-xl text-gray-400 hover:text-text transition-colors duration-500 hover:scale-110"
