feat(navbar): add language selector style

--- a/src/sections/navbar.astro
+++ b/src/sections/navbar.astro
@@ -46,9 +46,9 @@ import "@/styles/navbar.css";
       <!-- Menu Footer -->
       <div class="menu-footer">
         <!-- Language selector -->
-        <div class="flex items-center gap-2 justify-center text-xl">
+        <div id="language-selector" class="language-selector font-bold text-base md:text-lg">
           <i class="ti ti-world"></i>
-          <span>Language</span>
+          <span id="language-text">English</span>
         </div>
 
         <!-- Social Links -->
@@ -60,3 +60,4 @@ import "@/styles/navbar.css";
 
 <!-- Animation Script -->
 <script src="/src/animations/navbar/menu-animated.js"></script>
+<script src="/src/components/language/language.js"></script>
